<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fixit.AdicionarChamadoActivity"
    tools:showIn="@layout/activity_adicionar_chamado">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/tipo_problema" />

            <Spinner
                android:id="@+id/spTipoProblemaAdicionar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/tipo_problema"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/problema" />

            <Spinner
                android:id="@+id/spProblemaAdicionar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/sala" />

            <Spinner
                android:id="@+id/spSalaAdicionar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/computador" />

            <Spinner
                android:id="@+id/spComputadorAdicionar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:spinnerMode="dropdown" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etObservacaoAdicionar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/observacao"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
